feat(workflow): 添加repository-path参数以支持动态仓库路径
- 在多个maven构建部署工作流中新增repository-path输入参数
- 允许通过repository-path显式指定要检出的代码仓库路径
- 更新默认值为对应模块的QuantumTop仓库路径
- 修改checkout步骤使用动态仓库路径配置
- 统一各模块工作流中的参数定义格式

--- a/.github/workflows/maven-build-deploy.yml
+++ b/.github/workflows/maven-build-deploy.yml
@@ -48,6 +48,11 @@ on:
         required: false
         default: 'lunarstra-quantum'
         type: string
+      repository-path:
+        description: 'Maven repository username'
+        required: false
+        default: 'QuantumTop/quantum-web'
+        type: string
   workflow_call:
     inputs:
       java-version:
@@ -103,6 +108,11 @@ on:
       artifact-version:
         description: 'Version of the deployed artifact'
         value: ${{ jobs.build-deploy.outputs.version }}
+      repository-path:
+        description: 'Maven repository username'
+        required: false
+        default: 'QuantumTop/quantum-web'
+        type: string
 
 jobs:
   parent-deploy:
@@ -129,7 +139,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+        with:
+          repository: ${{ inputs.repository-path }}   # 👈 显式指定
+          ref: ${{ github.ref }}
+          
       - name: Set up JDK ${{ inputs.java-version }}
         uses: actions/setup-java@v4
         with:
