ci(workflows): 重命名parent-deploy作业为quantum-parent-deploy
- 将所有模块中的parent-deploy作业名称统一修改为quantum-parent-deploy
- 更新了作业间的依赖关系引用以匹配新的作业名称
- 在quantum-gateway工作流中新增了quantum-common-deploy作业
- 确保所有相关的工作流文件都同步更新以维持构建顺序

--- a/.github/workflows/maven-build-deploy.yml
+++ b/.github/workflows/maven-build-deploy.yml
@@ -115,7 +115,7 @@ on:
         type: string
 
 jobs:
-  parent-deploy:
+  quantum-parent-deploy:
     uses: lunarstra/Quantum/.github/workflows/maven-build-deploy.yml@main
     with:
       java-version: ${{ inputs.java-version }}
@@ -131,7 +131,7 @@ jobs:
       MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
 
   build-deploy:
-    needs: parent-deploy
+    needs: quantum-parent-deploy
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.get-version.outputs.version }}
