ci(workflows): 在构建摘要中添加组件信息
- 在 quantum-lib 的 maven 构建工作流中添加组件名称到摘要表格
- 在 quantum-web 的 maven 构建工作流中添加组件名称到摘要表格

--- a/.github/workflows/maven-build-deploy.yml
+++ b/.github/workflows/maven-build-deploy.yml
@@ -255,6 +255,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| **Component** | **quantum-web** |" >> $GITHUB_STEP_SUMMARY
           echo "| **Artifact Version** | \`${{ steps.get-version.outputs.version }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| **Repository** | ${{ inputs.repository-url }} |" >> $GITHUB_STEP_SUMMARY
           echo "| **Server ID** | ${{ inputs.server-id }} |" >> $GITHUB_STEP_SUMMARY
