refactor(workflow): 重构Maven构建部署工作流
- 统一将输入参数 repository-path 重命名为 repository-module
- 更新所有引用 repository-path 的地方为 repository-module
- 在 quantum-lib 工作流中引入模块构建跳过检查逻辑
- 添加 built-modules 输出以支持跨模块依赖构建控制
- 引入 whelk-io/maven-settings-xml-action 简化 Maven 配置
- 增加对已构建模块的跳过处理及相应摘要提示
- 调整工作流调用顺序，确保依赖模块正确构建
- 修改项目版本获取命令，增加 -N 参数避免继承问题

--- a/.github/workflows/maven-build-deploy.yml
+++ b/.github/workflows/maven-build-deploy.yml
@@ -48,7 +48,7 @@ on:
         required: false
         default: 'lunarstra-quantum'
         type: string
-      repository-path:
+      repository-module:
         description: 'Maven repository username'
         required: false
         default: 'QuantumTop/quantum-web'
@@ -108,7 +108,7 @@ on:
       artifact-version:
         description: 'Version of the deployed artifact'
         value: ${{ jobs.build-deploy.outputs.version }}
-      repository-path:
+      repository-module:
         description: 'Maven repository username'
         required: false
         default: 'QuantumTop/quantum-web'
@@ -140,7 +140,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          repository: ${{ inputs.repository-path }}   # 👈 显式指定
+          repository: ${{ inputs.repository-module }}   # 👈 显式指定
           ref: ${{ github.ref }}
           
       - name: Set up JDK ${{ inputs.java-version }}
