fix(workflow): 修复模块构建依赖关系
- 将 quantum-plugin-deploy 依赖从 lib 改为 common
- 更新 quantum-web-deploy 依赖为 plugin
- 修正 BUILT_MODULES 输出引用以匹配新的依赖结构
- 新增 quantum-web-user 模块的完整构建部署流程
- 添加 Docker 镜像构建与推送步骤
- 配置 Maven 设置以支持多模块构建环境

--- a/.github/workflows/maven-build-deploy.yml
+++ b/.github/workflows/maven-build-deploy.yml
@@ -180,8 +180,9 @@ jobs:
       built-modules: ${{ needs.quantum-lib-deploy.outputs.built-modules }}
     secrets:
       MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
+
   quantum-plugin-deploy:
-    needs: quantum-lib-deploy
+    needs: quantum-common-deploy  # 🔧 修复：依赖 common
     uses: QuantumTop/quantum-plugin/.github/workflows/maven-build-deploy.yml@main
     with:
       java-version: ${{ inputs.java-version }}
@@ -197,9 +198,8 @@ jobs:
     secrets:
       MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
 
-
   quantum-web-deploy:
-    needs: quantum-plugin-deploy
+    needs: quantum-plugin-deploy  # 🔧 修复：依赖 plugin
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.get-version.outputs.version }}
@@ -211,7 +211,7 @@ jobs:
         id: check-if-built
         run: |
           MODULE_NAME="${{inputs.repository-module}}"
-          BUILT_MODULES="${{ needs.quantum-lib-deploy.outputs.built-modules }}"
+          BUILT_MODULES="${{ needs.quantum-plugin-deploy.outputs.built-modules }}"  # 🔧 修复：使用 plugin 的输出
           
           if [[ ",$BUILT_MODULES," == *",$MODULE_NAME,"* ]]; then
             echo "⏭️  Module '$MODULE_NAME' already built, skipping..."
@@ -341,7 +341,7 @@ jobs:
         id: update-built-modules
         run: |
           MODULE_NAME="${{inputs.repository-module}}"
-          BUILT_MODULES="${{ needs.quantum-lib-deploy.outputs.built-modules }}"  # 🔧 修复：使用 lib 的输出而不是 parent 的
+          BUILT_MODULES="${{ needs.quantum-plugin-deploy.outputs.built-modules }}"  # 🔧 修复：使用 plugin 的输出
           
           if [ "${{ steps.check-if-built.outputs.skipped }}" == "false" ]; then
             # Add current module to the list
